edit output html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <h1><?= SITE_TITLE ?></h1>
-    <h2 class="result1">Output Files</h2>
+    <h2 class="result1">Output Tweets</h2>
       <? let data = main(); ?>
-      <p><?= data['JP'] ?></p>
-      <p><?= data['EN'] ?></p>
+      <p>JP：<?= data["JP"] ?></p>
+      <p>EN：<?= data["EN"] ?></p>
   </body>
 </html>
